{
    "name": "Input",
    "maps": [
        {
            "name": "Gameplay",
            "id": "e682f522-f912-4c37-aecd-dd1f386a6ae9",
            "actions": [
                {
                    "name": "RotateCameraToRight",
                    "type": "Button",
                    "id": "c274c89a-5528-4009-9645-e5b4aade5a0c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateCameraToLeft",
                    "type": "Button",
                    "id": "abac4f12-f34b-49e1-99c7-f2cfbd1edef5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveCamera",
                    "type": "Value",
                    "id": "e94362b6-db2f-4117-92fb-95f1117f9c3f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "86d8ede0-c141-4cb5-91c1-261f1b40b083",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "4e94360d-c3a7-42f5-8c60-f0fb77d1a71a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "EndTurn",
                    "type": "Button",
                    "id": "e26549a3-87c2-4854-9532-923ab8d04ff7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightMouseClick",
                    "type": "Button",
                    "id": "031e18d0-df02-4c51-9e35-95337025c15e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeUnit",
                    "type": "Button",
                    "id": "08f75532-0f32-45b9-90c0-00428cdb0a5f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RedrawCard",
                    "type": "Button",
                    "id": "7032f530-de01-436b-beb0-a8b3dc488173",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ba5abbd8-06c3-422d-8df4-db1d320cf198",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCameraToRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17f9fc3f-9cdf-4c88-acda-5b229902db1e",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCameraToLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "3521b1e3-c92e-4137-a26b-b38627cd4512",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0fd991fa-9a6b-424e-a8c5-8cedeb077011",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "726d0769-b077-4a7a-a21c-d5c6c4e3eecd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "98cc48de-4981-471a-a27b-611560db0842",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "067b92f3-e187-429a-a087-f1772fd7d4ce",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d46231a2-c7ab-4eb4-a5f9-7abbd4615ecb",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e18e720-cca6-4651-b83d-ddb25249c668",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f40af8d-18cc-4e77-80d3-74593113dc97",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EndTurn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a47bc5c4-4d46-4eda-9f37-3080cc92c998",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cae9afa1-386d-4c69-a31b-1a6aca501130",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeUnit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3808eb3b-a800-43e9-b587-c3dfc50200c1",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RedrawCard",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}